hphp/hack/test/typecheck/open_shape_optional_required_reason1.php
<?hh

function foo(shape('field' => string, ...) $_): void {}

function bar(shape(...) $s): void {
  foo($s);
}
